--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        名刺や簡単なロゴの作成が可能です。
+                        名刺やロゴの作成が可能です。
                     </p>
                 </div>
 
@@ -181,6 +181,17 @@
                         コーポレートサイトやランディングページなどのレイアウトを作る際に使用しています。
                     </p>
                 </div>
+
+                <div class="skill-item">
+                    <h3 class="skill-title">AfterEffects/PremierePro</h3>
+                    <div class="skill-rating rating">
+                        <div class="rate rate3"></div>
+                    </div>
+                    <p class="skill-text">
+                        映像編集や簡単なアニメーションの作成が可能です。
+                    </p>
+                </div>
+                
             </div>
 
 
