--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                     <p class="works-text">
                         コーポレートサイトのリニューアルに伴い、設計からデザイン、動画編集、コーディング、wordpress化を行いました。
-                        制作期間は約1カ月(150時間)です。<br>
+                        制作期間は約150時間です。<br>
                         概要やソースコードなどの詳細はこちらに公開しています。<br>
                         <a href="https://github.com/mahi2121/murash" target="_blank">https://github.com/mahi2121/murash</a>
                     </p>
