--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                     <p>
                         大学卒業後、カスタマーエンジニア職を2年間経験しました。
                         その後、WEB業界に転職するために自己学習を行いつつ、半年間職業訓練校に通いました。
-                        フロントエンドエンジニアとしてキャリアを積みながらマーケティングなどの知識も身につけ、
-                        将来的にはWEBディレクターになりたいと考えています。
+                        フロントエンドエンジニアとしてキャリアを積みたいと考えています。
                         コーディングやプログラミングに没頭しがちです。
                     </p>
                     <table>
