--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         その後、WEB業界に転職するために自己学習を行いつつ、半年間職業訓練校に通いました。
                         フロントエンドエンジニアとしてキャリアを積みたいと考えています。
                         コーディングやプログラミングに没頭しがちです。
+                        業界未経験ですが1日でも早く戦力になれるよう頑張ります！
                     </p>
                     <table>
                         <tr>
