--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
                     <p>
                         大学卒業後、カスタマーエンジニア職を2年間経験しました。
                         その後、WEB業界に転職するために自己学習を行いつつ、半年間職業訓練校に通いました。
-                        フロントエンドエンジニアとしてキャリアを積みたいと考えています。
-                        コーディングやプログラミングに没頭しがちです。
-                        WEB業界未経験ですが1日でも早く戦力になれるよう頑張ります！
+                        コーダーからフロントエンドエンジニアとしてキャリアを積みたいと考えています。
+                        未経験ですが1日でも早く戦力になれるよう頑張ります！
                     </p>
                     <table>
                         <tr>
@@ -210,18 +209,19 @@
                         コーポレートサイトのリニューアルに伴い、設計からデザイン、動画編集、コーディング、wordpress化を行いました。
                         制作期間は約150時間です。<br>
                         概要やソースコードなどの詳細はこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/murash" target="_blank">https://github.com/mahi2121/murash</a>
+                        <a href="https://github.com/mahi2121/murash" target="_blank">https://github.com/mahi2121/murash/</a>
                     </p>
                 </div>
 
                 <div class="works-item">
                     <img class="works-img" src="img/works1.png" alt="">
                     <h3 class="works-title">ポートフォリオサイト(本サイト)</h3>
-                    <h4 class="works-url"><br></h4>
+                    <h4 class="works-url">https://mahi2121.github.io/portfolio/<br></h4>
 
                     <p class="works-text">
                         本ポートフォリオサイトの制作にあたっては、vue.jsやSassを使用しています。
-
+                        概要やソースコードなどの詳細はこちらに公開しています。<br>
+                        <a href="https://github.com/mahi2121/murash">https://github.com/mahi2121/portfolio</a>
                     </p>
                 </div>
             </div>
