--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>
                         大学卒業後、カスタマーエンジニア職を2年間経験しました。
                         その後、WEB業界に転職するために自己学習を行いつつ、半年間職業訓練校に通いました。
-                        コーダーからフロントエンドエンジニアとしてキャリアを積みたいと考えています。
+                        フロントエンドエンジニアとしてキャリアを積みたいと考えています。
                         未経験ですが1日でも早く戦力になれるよう頑張ります！
                     </p>
                     <table>
@@ -116,7 +116,7 @@
                     </div>
                     <p class="skill-text">
                         サイト制作に必要なCSSの基礎スキルは備わっています。
-                        本ポートフォリオサイトはSassを使用して制作しました。
+                        本ポートフォリオサイトはSCSSを使用して制作しました。
                     </p>
                 </div>
 
@@ -182,7 +182,7 @@
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">AfterEffects/PremierePro</h3>
+                    <h3 class="skill-title">PremierePro/AfterEffects</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
@@ -203,25 +203,25 @@
                 <div class="works-item">
                     <img class="works-img" src="img/works2.png" alt="">
                     <h3 class="works-title">株式会社MURASH様</h3>
-                    <h4 class="works-url"> <a href="https://www.murash.jp/" target="_blank">https://www.murash.jp/</a></h4>
+                    <h4 class="works-url"> <a href="https://www.murash.jp" target="_blank">https://www.murash.jp</a></h4>
 
                     <p class="works-text">
                         コーポレートサイトのリニューアルに伴い、設計からデザイン、動画編集、コーディング、wordpress化を行いました。
                         制作期間は約150時間です。<br>
                         概要やソースコードなどの詳細はこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/murash" target="_blank">https://github.com/mahi2121/murash/</a>
+                        <a href="https://github.com/mahi2121/murash" target="_blank">https://github.com/mahi2121/murash</a>
                     </p>
                 </div>
 
                 <div class="works-item">
                     <img class="works-img" src="img/works1.png" alt="">
                     <h3 class="works-title">ポートフォリオサイト(本サイト)</h3>
-                    <h4 class="works-url">https://mahi2121.github.io/portfolio/<br></h4>
+                    <h4 class="works-url">https://mahi2121.github.io/portfolio<br></h4>
 
                     <p class="works-text">
                         本ポートフォリオサイトの制作にあたっては、vue.jsやSassを使用しています。
-                        概要やソースコードなどの詳細はこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/murash">https://github.com/mahi2121/portfolio</a>
+                        ソースコードはこちらに公開しています。<br>
+                        <a href="https://github.com/mahi2121/portfolio" target="_blank">https://github.com/mahi2121/portfolio</a>
                     </p>
                 </div>
             </div>
