--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                     <p class="skill-text">
                         サイト制作に必要なHTMLの基礎スキルは備わっています。
-                        自分以外の人が見ても分かりやすいコーディングを心がけています。
+                        コーディングの際には保守性を意識しています。
                     </p>
                 </div>
 
