--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <p class="skill-text">
                         サイト制作に必要なHTMLの基礎スキルは備わっています。
-                        コーディングの際には保守性を意識しています。
+                        コーディングの際には保守性やSEO対策を意識しています。
                     </p>
                 </div>
 
