--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="about">
             <h2 class="section-title">ABOUT</h2>
             <div class="about-inr">
-                <img class="about-img" src="img/about.png" alt="">
+                <img class="about-img" src="img/about.png" alt="about">
                 <div class="detail">
                     <h3 class="name">松田 紘輝</h3>
                     <p>
@@ -104,7 +104,7 @@
                     </div>
                     <p class="skill-text">
                         サイト制作に必要なHTMLの基礎スキルは備わっています。
-                        コーディングの際には保守性やSEO対策を意識しています。
+                        コーディングの際には保守性を意識しています。
                     </p>
                 </div>
 
@@ -200,27 +200,27 @@
             <div class="works-list">
 
                 <div class="works-item">
-                    <img class="works-img" src="img/works2.png" alt="">
+                    <img class="works-img" src="img/works2.png" alt="works2">
                     <h3 class="works-title">株式会社MURASH様</h3>
-                    <h4 class="works-url"> <a href="https://www.murash.jp" target="_blank">https://www.murash.jp</a></h4>
+                    <h4 class="works-url"> <a href="https://www.murash.jp/" target="_blank">https://www.murash.jp/</a></h4>
 
                     <p class="works-text">
                         コーポレートサイトのリニューアルに伴い、設計からデザイン、動画編集、コーディング、wordpress化を行いました。
                         制作期間は約150時間です。<br>
                         概要やソースコードなどの詳細はこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/murash" target="_blank">https://github.com/mahi2121/murash</a>
+                        <a href="https://github.com/mahi2121/murash/" target="_blank">https://github.com/mahi2121/murash/</a>
                     </p>
                 </div>
 
                 <div class="works-item">
-                    <img class="works-img" src="img/works1.png" alt="">
+                    <img class="works-img" src="img/works1.png" alt="works1">
                     <h3 class="works-title">ポートフォリオサイト(本サイト)</h3>
-                    <h4 class="works-url">https://mahi2121.github.io/portfolio<br></h4>
+                    <h4 class="works-url">https://mahi2121.github.io/portfolio/<br></h4>
 
                     <p class="works-text">
                         本ポートフォリオサイトの制作にあたっては、vue.jsやSassを使用しています。
                         ソースコードはこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/portfolio" target="_blank">https://github.com/mahi2121/portfolio</a>
+                        <a href="https://github.com/mahi2121/portfolio/" target="_blank">https://github.com/mahi2121/portfolio/</a>
                     </p>
                 </div>
             </div>
