--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                     <p>
                         大学卒業後、カスタマーエンジニア職を2年間経験しました。
                         その後、WEB業界に転職するために自己学習を行いつつ、半年間職業訓練校に通いました。
-                        未経験ですが1日でも早く戦力になれるよう頑張ります！
                     </p>
                     <table>
                         <tr>
@@ -125,7 +124,7 @@
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        現在勉強中です。サイト制作の際にはjQueryやvue.jsを使用しています。
+                        サイト制作の際にはjQueryやvue.jsを使用しています。
                     </p>
                 </div>
 
@@ -135,7 +134,7 @@
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        現在勉強中です。wordpress化の際に使用しています。
+                        wordpress化の際に使用しています。
                     </p>
                 </div>
 
