--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h3 class="name">松田 紘輝</h3>
                     <p>
                         大学卒業後、カスタマーエンジニア職を2年間経験しました。
-                        その後、WEB業界に転職するために自己学習を行いつつ、半年間職業訓練校に通いました。
+                        その後、自己学習を行いつつ半年間職業訓練校に通いました。
                     </p>
                     <table>
                         <tr>
