--- a/index.html
+++ b/index.html
@@ -65,28 +65,27 @@
                 <div class="detail">
                     <h3 class="name">松田 紘輝</h3>
                     <p>
-                        大学卒業後、カスタマーエンジニア職を2年間経験しました。
-                        その後、自己学習を行いつつ半年間職業訓練校に通いました。
+                        文字が入ります。
                     </p>
                     <table>
                         <tr>
-                            <th>生年月日</th>
-                            <td>1995年10月28日</td>
+                            <th>文字が入ります。</th>
+                            <td>文字が入ります。</td>
                         </tr>
 
                         <tr>
-                            <th>出身地</th>
-                            <td>宮崎県延岡市</td>
+                            <th>文字が入ります。</th>
+                            <td>文字が入ります。</td>
                         </tr>
 
                         <tr>
-                            <th>好きな食べ物</th>
-                            <td>博多ラーメン</td>
+                            <th>文字が入ります。</th>
+                            <td>文字が入ります。</td>
                         </tr>
 
                         <tr>
-                            <th>休日の過ごし方</th>
-                            <td>オンライン飲み会</td>
+                            <th>文字が入ります。/th>
+                            <td>文字が入ります。</td>
                         </tr>
                     </table>
                 </div>
@@ -97,95 +96,92 @@
             <h2 class="section-title">SKILL</h2>
             <div class="skill-list">
                 <div class="skill-item">
-                    <h3 class="skill-title">HTML</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate4"></div>
                     </div>
                     <p class="skill-text">
-                        サイト制作に必要なHTMLの基礎スキルは備わっています。
-                        コーディングの際には保守性やSEO対策を意識しています。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">CSS/Sass</h3>
+                    <h3 class="skill-title"文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate4"></div>
                     </div>
                     <p class="skill-text">
-                        サイト制作に必要なCSSの基礎スキルは備わっています。
-                        本ポートフォリオサイトはSCSSを使用して制作しました。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">JavaScript</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        サイト制作の際にはjQueryやvue.jsを使用しています。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">PHP</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        wordpress化の際に使用しています。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">WordPress</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        テーマファイルの作成が可能です。
-                        wordpress化の際にはカスタム投稿やカスタムフィールドの追加が可能です。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">Photoshop</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        バナー制作が可能です。また、写真や画像を用途に応じて加工することも可能です。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">Illustrator</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        名刺やロゴの作成が可能です。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">XD</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate4"></div>
                     </div>
                     <p class="skill-text">
-                        コーポレートサイトやランディングページなどのレイアウトを作る際に使用しています。
+                        文字が入ります。
                     </p>
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title">PremierePro/AfterEffects</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
                         <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
-                        映像編集や簡単なアニメーションの作成が可能です。
+                        文字が入ります。
                     </p>
                 </div>
                 
@@ -200,27 +196,23 @@
 
                 <div class="works-item">
                     <img class="works-img" src="img/works2.png" alt="works2">
-                    <h3 class="works-title">株式会社MURASH様</h3>
-                    <h4 class="works-url"> <a href="https://www.murash.jp/" target="_blank">https://www.murash.jp/</a></h4>
+                    <h3 class="works-title">文字が入ります。</h3>
+                    <h4 class="works-url"> <a href="文字が入ります。" target="_blank">文字が入ります。</a></h4>
 
                     <p class="works-text">
-                        コーポレートサイトのリニューアルに伴い、設計からデザイン、動画編集、コーディング、wordpress化を行いました。
-                        制作期間は約150時間です。<br>
-                        概要やソースコードなどの詳細はこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/murash/" target="_blank">https://github.com/mahi2121/murash/</a>
+                        文字が入ります。<br>
+                        <a href="文字が入ります。" target="_blank">文字が入ります。</a>
                     </p>
                 </div>
 
                 <div class="works-item">
                     <img class="works-img" src="img/works1.png" alt="works1">
-                    <h3 class="works-title">ポートフォリオサイト(本サイト)</h3>
-                    <h4 class="works-url">https://mahi2121.github.io/portfolio/<br></h4>
+                    <h3 class="works-title">文字が入ります。</h3>
+                    <h4 class="works-url">文字が入ります。<br></h4>
 
                     <p class="works-text">
-                        本ポートフォリオサイトの制作にあたっては、vue.jsやSassを使用しています。
-                        また、JSにてダークモードに対応させました。
-                        ソースコードはこちらに公開しています。<br>
-                        <a href="https://github.com/mahi2121/portfolio/" target="_blank">https://github.com/mahi2121/portfolio/</a>
+                       文字が入ります。<br>
+                        <a href="文字が入ります。" target="_blank">文字が入ります。</a>
                     </p>
                 </div>
             </div>
