--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <transition name="menu">
               <div class="menu" v-show="ActiveBtn">
                   <ul>
-                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#about" >ABOUT</a></li>
-                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#skill" >SKILL</a></li>
-                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#works" >WORKS</a></li>
-                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#contact" >CONTACT</a></li>
+                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#about" >文字が入ります。</a></li>
+                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#skill" >文字が入ります。</a></li>
+                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#works" >文字が入ります。</a></li>
+                    <li class="sidebar-item" v-on:click='ActiveBtn=!ActiveBtn'><a href="#contact" >文字が入ります。</a></li>
                   </ul>
               </div>
           </transition>
@@ -41,29 +41,29 @@
 
         <nav class="pc-nav">
             <ul class="pc-list">
-                <li class="pc-item"><a href="#about" class="pc-anchor">ABOUT</a></li>
-                <li class="pc-item"><a href="#skill" class="pc-anchor">SKILL</a></li>
-                <li class="pc-item"><a href="#works" class="pc-anchor">WORKS</a></li>
-                <li class="pc-item"><a href="#contact" class="pc-anchor">CONTACT</a></li>
+                <li class="pc-item"><a href="#about" class="pc-anchor">文字が入ります。</a></li>
+                <li class="pc-item"><a href="#skill" class="pc-anchor">文字が入ります。</a></li>
+                <li class="pc-item"><a href="#works" class="pc-anchor">文字が入ります。</a></li>
+                <li class="pc-item"><a href="#contact" class="pc-anchor">文字が入ります。</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="visual">
         <div class="visual-title">
-            <h1 class="visual-main-title">PORTFOLIO</h1>
-            <h2 class="visual-sub-title">by Hiroki Matsuda</h2>
+            <h1 class="visual-main-title">文字が入ります。</h1>
+            <h2 class="visual-sub-title">文字が入ります。</h2>
         </div>
     </section>
     
     <main class="content">
 
         <section id="about">
-            <h2 class="section-title">ABOUT</h2>
+            <h2 class="section-title">文字が入ります。</h2>
             <div class="about-inr">
                 <img class="about-img" src="img/about.png" alt="about">
                 <div class="detail">
-                    <h3 class="name">松田 紘輝</h3>
+                    <h3 class="name">文字が入ります。</h3>
                     <p>
                         文字が入ります。
                     </p>
@@ -93,7 +93,7 @@
         </section>
 
         <section id="skill">
-            <h2 class="section-title">SKILL</h2>
+            <h2 class="section-title">文字が入ります。</h2>
             <div class="skill-list">
                 <div class="skill-item">
                     <h3 class="skill-title">文字が入ります。</h3>
@@ -190,7 +190,7 @@
 
         </section>
 
-        <section id="works">
+        <section id="文字が入ります。">
             <h2 class="section-title">WORKS</h2>
             <div class="works-list">
 
@@ -219,7 +219,7 @@
         </section>
 
         
-        <section id="contact">
+        <section id="文字が入ります。">
             <h2 class="section-title">CONTACT</h2>
             <h3 class="contact-message">お気軽にご連絡ください。</h3>
             <form
