--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </tr>
 
                         <tr>
-                            <th>文字が入ります。/th>
+                            <th>文字が入ります。</th>
                             <td>文字が入ります。</td>
                         </tr>
                     </table>
@@ -98,7 +98,7 @@
                 <div class="skill-item">
                     <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
-                        <div class="rate rate4"></div>
+                        <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
                         文字が入ります。
@@ -106,9 +106,9 @@
                 </div>
 
                 <div class="skill-item">
-                    <h3 class="skill-title"文字が入ります。</h3>
+                    <h3 class="skill-title">文字が入ります。</h3>
                     <div class="skill-rating rating">
-                        <div class="rate rate4"></div>
+                        <div class="rate rate3"></div>
                     </div>
                     <p class="skill-text">
                         文字が入ります。
@@ -190,7 +190,7 @@
 
         </section>
 
-        <section id="文字が入ります。">
+        <section id="works">
             <h2 class="section-title">WORKS</h2>
             <div class="works-list">
 
@@ -219,7 +219,7 @@
         </section>
 
         
-        <section id="文字が入ります。">
+        <section id="contact">
             <h2 class="section-title">CONTACT</h2>
             <h3 class="contact-message">お気軽にご連絡ください。</h3>
             <form
